--- a/src/com/company/UI/CueGrid.fxml
+++ b/src/com/company/UI/CueGrid.fxml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.UI.CueGridController">
    <children>
-      <Pane layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="238.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text layoutX="392.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-            <Text layoutX="392.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-            <Text layoutX="392.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="31.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true" />
+            <Text fx:id="artist" layoutX="276.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+            <Text fx:id="album" layoutX="276.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+            <ListView fx:id="trackList" focusTraversable="false" layoutX="140.0" layoutY="138.0" pickOnBounds="false" prefHeight="100.0" prefWidth="300.0" />
+            <ProgressBar fx:id="progress" layoutX="190.0" layoutY="109.0" prefWidth="200.0" progress="0.0" />
          </children>
       </Pane>
    </children>
